# x

./: .pre-commit-config.yaml  README.md  pyproject.toml
dashboards-with-dash-and-duckdb/: CONTRIBUTING.md  README.md  noxfile.py  package.json  pyproject.toml
dashboards-with-dash-and-duckdb/dash_duckdb/: __init__.py  app.py
