[tool.poetry]
name = "dash-duckdb"
version = "0.1.0"
description = ""
authors = ["Bobby Tables <bobbytables@ntile.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.14.2"
plotly = "^5.18.0"
pandas = "^2.2.0"

[tool.poetry.scripts]
dash-duckdb = 'dash_duckdb.app:main'

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
pylint = "^3.0.3"
nox = "^2023.4.22"
pytest = "^8.0.0"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ########################
# ##### BLACK
# ########################

# [Docs root]
#   https://black.readthedocs.io/en/stable/
# [Config option reference]
#   https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#command-line-options

[tool.black]
# Black will refuse to run if it's not this version.
required-version = "24.1.1"

# Ensure black's output will be compatible with all listed versions.
target-version = ['py39', 'py310', 'py311', 'py312']

# ########################
# ##### ISORT
# ########################

# [Docs root]
#   https://pycqa.github.io/isort/
# [Config option reference]
#   https://pycqa.github.io/isort/docs/configuration/options.html

# NOTE: File inclusion//exclusion/skip options are set at the invocation site
# and shouldn't be set in this config file.

[tool.isort]

# Ensures isort classifies imports from our package as first-party.
known_first_party = ["dash_duckdb"]

# Sets a variety of default options for parentheses etc that are compatible with black.
profile = "black"

# Sorts uppercase imports before lowercase improts.
case_sensitive=true

# ########################
# ##### PYLINT
# ########################

# [Docs root]
#   https://pylint.pycqa.org/en/latest/
# [Rule/options reference]
#   https://pylint.pycqa.org/en/latest/technical_reference/features.html
#   This is a comprehensive reference of all Pylint checkers/rules and seems to be one of the only
#   docs pages that's actually maintained.
# [Changelog]
#   https://pylint.pycqa.org/en/latest/whatsnew/index.html
#   Often contains up-to-date info that corrects incorrect stuff in the older docs.
# [Github issues]
#   https://github.com/PyCQA/pylint/issues
#   Best places to find workarounds or discussion/explanation of weird behavior.

# Pylint has many options that are divvied up by category. Each [SECTION] below corresponds to a
# section in the "Rule/options reference" doc.

[tool.pylint.master]

# the default of 4 is quite aggressive
min-similarity-lines = "20"

# Minimum python version.
py-version = "3.9"

[tool.pylint.messages-control]
disable=[
    # [checker] redundant with mypy
    "typecheck",
    # Sometimes it's useful to leave `TODO` comments in the code.
    "fixme",
]

[tool.pylint.format]

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
max-line-length = "88"

[tool.pylint.basic]

# Minimum line length for functions/classes that require docstrings, shorter ones are exempt.
docstring-min-length = "10"

[tool.pylint.design]

# Maximum number of attributes for a class.
max-attributes="8"

# Maximum number of arguments for function / method.
max-args = "8"

# ########################
# ##### PYTEST
# ########################

# [Docs root]
#   https://docs.pytest.org/en/stable/
# [Config option reference]
#   https://docs.pytest.org/en/stable/reference/customize.html

[tool.pytest.ini_options]
